Basic header and footer changes for QMU

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -59,3 +59,17 @@
     margin-bottom:5px;
   }
 }
+
+/* QMU customisations */
+
+header .navbar-brand img{
+  height: 98px;
+}
+
+header .navbar {
+  min-height: 120px;
+}
+
+header .navbar-default {
+  background-color: #374a5c;
+}
