LUC656A-9 First HWU 6 commit

--- a/dspace-xmlui-mirage2/src/main/webapp/styles/classic_mirage_color_scheme/_bootstrap_variables.scss
+++ b/dspace-xmlui-mirage2/src/main/webapp/styles/classic_mirage_color_scheme/_bootstrap_variables.scss
@@ -7,7 +7,8 @@
  */
 // Preset Bootstrap variables
 // ----------------------
-$brand-primary: #607890 !default;
+$brand-primary: #524c44 !default;
 
-$navbar-inverse-bg: #1F3F5E !default;
+$navbar-inverse-bg: #625c54 !default;
 $navbar-inverse-link-color: #eee !default;
+$bootstrap-sass-asset-helper: true;
