More changes to submissions

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -285,6 +285,10 @@ div.ds-search-link {
   margin-top: -25px;
 }
 
+#aspect_eperson_LoginChooser_list_ldap-login .control-label.required::after,
+#aspect_eperson_LoginChooser_div_login_header .control-label.required::after{
+    content: "";
+}
 
 /* responsiveness */
  @media (max-width: 575px) {
