Change selection color from hotpink to blue.

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -19,7 +19,8 @@
 
 @include selection {
     color: white;
-    background: cornflowerblue;
+    background: #4fb4e5;
+
 }
 
 .publication-records-modal, .publication-records-modal ul {
