--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -19,7 +19,7 @@
 
 @include selection {
     color: white;
-    background: hotpink;
+    background: cornflowerblue;
 }
 
 .publication-records-modal, .publication-records-modal ul {
