--- a/dspace-xmlui/src/main/webapp/themes/Kubrick/lib/css/style.css
+++ b/dspace-xmlui/src/main/webapp/themes/Kubrick/lib/css/style.css
@@ -58,6 +58,14 @@ text-align:center;
     margin:0pt;
     padding-top:77px;
 }
+#uofe-logo {
+    width: 75%;
+    height: 75%;
+}
+.uofe-logo {
+    width: 75%;
+    height: 75%;
+}
 #ds-trail
 {
    /*list-style-type: none;*/
@@ -138,6 +146,9 @@ text-align:center;
 {
     position: relative;
     left: 250px;
+}
+.footer-policy a {
+    margin-right: 10px;
 }
 
 
@@ -1948,6 +1959,9 @@ display:block;
 margin-bottom:60px;
 margin-top:10px;
 /*text-align:center;*/
+}
+.nav li a:hover {
+    text-decoration: underline;
 }
 
 /* FOR CC License */
