DS-4192 Transfering Styles from Old ERA

--- a/dspace-xmlui-mirage2/src/main/webapp/styles/_style.scss
+++ b/dspace-xmlui-mirage2/src/main/webapp/styles/_style.scss
@@ -30,7 +30,7 @@
   
   // Our stuff - ERA
   
-  /*
+  
   .navbar {
     //border: 1px solid transparent;
     //margin-bottom: 20px;
@@ -40,9 +40,9 @@
   header .navbar-brand img{
     height: 75px;
   }
-  */
   
-  .era-header {
+  
+  /*.era-header {
     background-color: $era-header-bg;
   }
   
@@ -72,4 +72,4 @@
   
   .dl-horizontal dt {
     text-align: left;
-  }
+  }*/
