--- a/dspace-xmlui-mirage2/src/main/webapp/styles/classic_mirage_color_scheme/_bootstrap_variables.scss
+++ b/dspace-xmlui-mirage2/src/main/webapp/styles/classic_mirage_color_scheme/_bootstrap_variables.scss
@@ -9,5 +9,10 @@
 // ----------------------
 $brand-primary: #607890 !default;
 
-$navbar-inverse-bg: #1F3F5E !default;
+//$navbar-inverse-bg: #1F3F5E !default;
 $navbar-inverse-link-color: #eee !default;
+
+
+// Our stuff - ERA
+
+$navbar-inverse-bg: #2B466B !default; 
